# lotabots

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  deploy-all.sh  deploy-whatsapp.sh  deploy.sh  docker-compose.debug.yml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
analysis/: analyze.sh
analysis/metrics/: disk_usage_20241217_022630.txt  disk_usage_20241217_023616.txt  gpu_metrics_20241217_022630.csv  gpu_metrics_20241217_023616.csv  memory_usage_20241217_022630.txt  memory_usage_20241217_023616.txt
analysis/reports/: performance_report_20241217_022630.txt
config/: system.toml
gcloud components install alpha beta skaffold minikube kubectl gke-gcloud-auth-plugin/google-cloud-sdk/.install/: bq-nix.snapshot.json  core-nix.snapshot.json  gcloud-crc32c-linux-arm.snapshot.json  gsutil-nix.snapshot.json
google-generative-ai-rs/axum-macros/: .cargo-checksum.json
google-generative-ai-rs/axum-prometheus/: .cargo-checksum.json  Cargo.toml
google-generative-ai-rs/google-generative-ai-rs/: .cargo-checksum.json  Cargo.toml
google-generative-ai-rs/metrics-exporter-prometheus/: .cargo-checksum.json  Cargo.toml
google-generative-ai-rs/metrics-exporter-prometheus-0.15.3/: .cargo-checksum.json  Cargo.toml
google-generative-ai-rs/mockall/: .cargo-checksum.json
google-generative-ai-rs/redis/: .cargo-checksum.json  Cargo.toml
google-generative-ai-rs/reqwest-streams/: .cargo-checksum.json  Cargo.toml
google-generative-ai-rs/security-framework/: .cargo-checksum.json  Cargo.toml
lotabots-cli/: Cargo.toml
lotabots-cli/src/: main.rs
lotabots-core/: Cargo.toml
lotabots-core/src/: lib.rs  quantizer.rs
lotabots-fetch/: Cargo.toml
lotabots-fetch/src/: lib.rs
lotabots-gemini/: Cargo.toml
