[workspace]
members = [
    "lotabots-core",
    "lotabots-whatsapp",
    "lotabots-gemini",
    "lotabots-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Lotabots Team"]
description = "A WhatsApp bot for model quantization and AI interactions"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1.83"
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
axum = { version = "0.7.9", features = ["macros"] }
serde = { version = "1.0.216", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
redis = { version = "0.27.6", features = ["tokio-comp"] }
clap = { version = "4.5.23", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json", "multipart"] }