[workspace]
members = [
    "lotabots",
    "lotabots-core",
    "lotabots-quantize",
    "lotabots-fetch",
    "lotabots-upload"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NVIDIA Corporation"]
license = "Apache-2.0"
repository = "https://github.com/nvidia/lotabots"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42.0", features = ["full"] }
async-trait = "0.1.83"

# Error handling
thiserror = "2.0.7"
anyhow = "1.0.94"

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# CLI
clap = { version = "4.5.23", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

# GPU detection
sysinfo = "0.33.0"

# HTTP client
reqwest = { version = "0.12.9", features = ["json", "multipart"] }

# Testing
criterion = "0.5.1"
proptest = "1.6.0"
